<resources>
    <string name="app_name">HabitHub</string>
    <string name="task_main_header">Task List</string>
    <string name="faq_header">FAQ</string>
    <string name="dev_note_header">Developer Note</string>

    <string name="toolbar_create_title">Create</string>
    <string name="toolbar_schedule_title">Schedule</string>
    <string name="back_text">Back</string>
    <string name="next_text">Next</string>
    <string name="save_text">Save</string>
    <string name="edit_task_header">Edit Task</string>
    <string name="edit_task_desc">Description</string>
    <string name="edit_task_color">Select a Color</string>
    <string name="edit_task_goal">Goal</string>
    <string name="edit_task_interval">Task Interval</string>
    <string name="edit_task_icon">Select an Icon</string>

    <string name="edit_task_done_btn">Done</string>
    <string name="edit_task_desc_hint">Name of habit</string>
    <string name="edit_task_goal_hint">Enter your goal</string>
    <string name="daily_button">Daily</string>
    <string name="weekly_button">Weekly</string>
    <string name="monthly_button">Monthly</string>

    <string name="not_completed">Please select when this task should occur</string>
    <string name="abbrev_popup_text">Enter a 5 letter term for your task</string>
    <string name="select_time">Pick your time</string>
    <string name="anytime">Anytime</string>
    <string name="goal_picker_daily">Set your goal</string>
    <string name="goal_picker_weekly">How many times a week?</string>
    <string name="goal_picker_monthly">How many times a month?</string>
    <string name="ok">Ok</string>

    <string name="new_smartwatch_task">NEW_TASK</string>

    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">TR</string>
    <string name="friday">F</string>
    <string name="saturday">SA</string>
    <string name="sunday">SU</string>

    <string name="no_data_available">No Tasks</string>
</resources>
