<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_desc"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/edit_desc_txtBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_task_desc_hint"
            android:inputType="textShortMessage"
            android:width="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_goal"
            android:textSize="25sp"
            android:paddingTop="24dp"/>

        <EditText
            android:id="@+id/edit_goal_txtBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_task_goal_hint"
            android:inputType="textShortMessage"
            android:width="100dp"/>
    </LinearLayout>

</LinearLayout>