<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/schedule_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/toolbarTransparent"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_text"
            android:fontFamily="sans-serif-condensed"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:fontFamily="sans-serif-condensed"
            android:textSize="23sp"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            android:textColor="@android:color/black"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/interval_daily_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/interval_sunday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SU"/>

        <Button
            android:id="@+id/interval_monday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="M"/>

        <Button
            android:id="@+id/interval_tuesday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="T"/>

        <Button
            android:id="@+id/interval_wednesday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="W"/>

        <Button
            android:id="@+id/interval_thursday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TR"/>

        <Button
            android:id="@+id/interval_friday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="F"/>

        <Button
            android:id="@+id/interval_saturday_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SA"/>

    </LinearLayout>

    <Button
        android:id="@+id/interval_everyday_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Everyday"/>

    <LinearLayout
        android:id="@+id/goal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_picker_daily"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="20dp"/>

        <NumberPicker
            android:id="@+id/daily_times_per_day_picker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_time"
        android:textSize="32sp"
        android:fontFamily="sans-serif-condensed"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/anytimeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anytime"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp"/>


    <LinearLayout
        android:id="@+id/repeat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Repeat Task"
            android:textSize="32sp"
            android:textAlignment="center"/>

        <Switch
            android:id="@+id/repeat_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/watch_task_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add task to watch?"
            android:textSize="32sp"
            android:textAlignment="center"/>

        <Switch
            android:id="@+id/watch_task_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="48dp" />

    </LinearLayout>

</LinearLayout>